--- a/css/style.css
+++ b/css/style.css
@@ -1,148 +1,20 @@
 @import "reset.css";
+@import "momentum.css";
+@import "meme-maker.css";
 
-@keyframes appear {
-	from {
-		opacity: 0%;
-	}
-	to {
-		opacity: 100%;
-	}
+body {
+	height: 100vh;
 }
-ol,
-ul {
-	list-style: disc;
-}
-#background {
+
+#meme-maker {
 	position: absolute;
-	width: 100%;
-	height: 100%;
 	left: 0px;
 	top: 0px;
 	right: 0px;
 	bottom: 0px;
-	z-index: -1;
 }
-body {
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
-	box-sizing: border-box;
-	padding: 0px 15px;
-}
-header,
-main,
-footer {
-	width: 100%;
-	opacity: 0;
-	color: white;
-	animation: appear 0.5s ease-in forwards;
-	animation-delay: 0.2s;
-	display: flex;
-	align-items: center;
-}
-
 .hidden {
 	display: none;
-}
-
-button {
-	border: none;
-}
-button:hover {
-	cursor: pointer;
-}
-
-header {
-	flex-direction: row;
-	justify-content: flex-end;
-	box-sizing: border-box;
-}
-#weather {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
-}
-#weather div {
-	height: 64px;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-around;
-	align-items: center;
-}
-#weather-icon {
-	height: 64px;
-	width: 64px;
-}
-#temperature {
-	font-size: 32px;
-}
-
-main {
-	flex-direction: column;
-	justify-content: center;
-}
-
-#clock {
-	font-size: 150px;
-	font-weight: 500;
-	margin-bottom: 20px;
-}
-
-#login-form button {
-	background-color: green;
-	height: 30px;
-	border-radius: 5px;
-}
-
-#greeting {
-	font-size: 60px;
-	font-weight: 500;
-	margin-bottom: 40px;
-}
-
-#todo {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
-}
-input {
-	border: none;
-	color: white;
-	background-color: transparent;
-	font-size: 24px;
-	min-width: 400px;
-	border-bottom: 5px solid white;
-	margin: 10px 0px;
-}
-input::placeholder {
-	color: white;
-}
-#todo-list {
-	font-size: 20px;
-}
-#todo-list li {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-}
-#todo-list button {
-	background-color: transparent;
-}
-
-footer {
-	height: 30px;
-	flex-direction: row;
-	justify-content: space-around;
-}
-#quote {
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-	align-items: center;
+	opacity: 0;
+	visibility: hidden;
 }
